--- a/Form Module/framework/FormProsesPresensi/FORMS/FormProsesPresensi.resx
+++ b/Form Module/framework/FormProsesPresensi/FORMS/FormProsesPresensi.resx
@@ -181,6 +181,15 @@
         SUVORK5CYII=
 </value>
   </data>
+  <data name="Label5.Text" xml:space="preserve">
+    <value>----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</value>
+  </data>
+  <data name="Label4.Text" xml:space="preserve">
+    <value>----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</value>
+  </data>
+  <data name="Label6.Text" xml:space="preserve">
+    <value>----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</value>
+  </data>
   <data name="btnCetak.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADMAAAAoCAYAAABTsMJyAAAABGdBTUEAALGPC/xhBQAAAAd0SU1FB+UL
